--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,6 +23,11 @@
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
       </div>
 
+      <div class="field mb-3">
+        <%= f.label :dob, class: "form-label" %><br />
+        <%= f.date_field :dob, autofocus: true, autocomplete: "dob", class: "form-control" %>
+      </div>
+
       <div class="actions">
         <%= f.submit "Sign up", class: "btn btn-primary" %>
       </div>
