--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,13 +1,18 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Invoices</h1>
-
 <div class="row">
-  <div id="invoices">
+  <div id="invoices" class="col-lg-8">
+    <h1>Invoices</h1>
     <% if @invoices.present? %>
       <%= render 'list', invoices: @invoices %>
     <% else %>
       <h4> There is no previous invoices available.</h4>
+    <% end %>
+  </div>
+  <div id="rewards" class="col-lg-4" style="border-left: 1px solid;">
+    <h1>Rewards</h1>
+    <% if @rewards.present? %>
+      <%= render 'reward_list', rewards: @rewards %>
     <% end %>
   </div>
 </div>
