--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,24 @@
   </head>
 
   <body class="container">
-    <nav class="navbar navbar-light bg-light">
-      <div class="container-fluid" style="float: right;">
-        <div class="home">
-          <%= link_to "Home", root_path %>
+      <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid" style="float: right;">
+          <% if user_signed_in? %>
+            <div class="home">
+              <%= link_to "Home", root_path %>
+            </div>
+
+            <div class="tier nav-nav ms-auto fw-bold">
+              <%= current_user.email %> | 
+              <span class="btn btn-success" style="cursor: auto;"> <%= current_user.tier.titleize %> </span>
+            </div>
+
+            <div class="sign-out nav-nav ms-4 text-danger">
+              <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+            </div>
+          <% end %>
         </div>
-        <div class="sign-out nav-nav ms-auto">
-          <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-        </div>
-      </div>
-    </nav>
+      </nav>
 
     <%= yield %>
   </body>
